<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="desc_donut">Donuts are glazed and sprinkled with candy</string>
    <string name="desc_ice_cream">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="desc_froyo">FroYo is premium self-serve frozen yogurt</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter Your Name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter Address</string>
    <string name="phone_label_text">Phone</string>
    <string name="enter_phone_hint">Enter Phone #</string>
    <string name="note_label_text">Note</string>
    <string name="enter_notes_hint">Enter notes</string>
    <string name="delivery_label_text">Choose a Delivery Method:</string>
    <string name="rb_sameday_text">Same day messenger service</string>
    <string name="rb_nextday_text">Next day ground delivery</string>
    <string name="rb_pickup_text">Pick up</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_order">Order</string>
    <string name="menu_status">Status</string>
    <string name="menu_favorites">Favorites</string>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>

    <string-array name="phone_labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
